<resources>
    <string name="app_name">Advanced Android</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="password_validation">Password Validation</string>
    <string name="display_name">Display Name</string>
    <string name="time_received">01:00 pm</string>
    <string name="sender_time">01:30 pm</string>
    <string name="receiver_message">message</string>
    <string name="sender_message">msg</string>
    <string name="add_contact">Add Contact</string>
    <string name="server_address">Server Address</string>
    <string name="back">Back</string>
    <string name ="change_username"> ""</string>
    <string name="change_password"> ""</string>
    <string name ="change_theme">""</string>
</resources>